syntax = "proto3";

package speedhockey.interface;

message Vector2 {
  double x = 1;
  double y = 2;
}

enum Team {
  SPECTATOR = 0;
  RED = 1;
  BLU = 2;
}

message Player {
  Vector2 position = 1;
  Team team = 2;
}

message GameState {
  Vector2 puck_pos = 1;
  map<string, Player> players = 2;
  int32 red_score = 3;
  int32 blu_score = 4;
}